--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: lucas magno
 email: lucasamagno@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   checkout out my links! 
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/myblog" # the subpath of your site, e.g. /blog
+url: "https://lucasamagno.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
 linkedin_username: lucasamagno
 github_username: lucasamagno
