--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: lucas magno
 email: lucasamagno@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   checkout out my links! 
-baseurl: "/myblog" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://lucasamagno.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
 linkedin_username: lucasamagno
