--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: lucas magno
+title: Lucas Magno
 email: lucasamagno@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  my model of reality
+  My Model of Reality
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://lucasamagno.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
