--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Lucas Magno
 email: lucasamagno@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Detroit, MI | Miami, FL
+  My Model of Reality
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://lucasamagno.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
