--- a/_config.yml
+++ b/_config.yml
@@ -19,13 +19,11 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Lucas Magno
-email: lucasamagno@gmail.com
+email: 
 description: >- # this means to ignore newlines until "baseurl:"
-  My Model of Reality
+  Welcome to my mind dump.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://lucasamagno.com" # the base hostname & protocol for your site, e.g. http://example.com
-linkedin_username: lucasamagno
-github_username: lucasamagno
 
 # Build settings
 theme: minima
